Add client and public feedback ratings
